feat: create header component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo-container">
-        <img src="src\assets\images\png\logo.png" alt="Logo">
+        <img src="/logo.png" alt="Logo">
     </div>
     <div class="text-container">
       <div class="heading">
