--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -62,6 +62,7 @@
 
 .form-group .btn-wrapper{
     display: flex;
+    flex-direction: column;
     gap: 12px;
     align-items: center;
     justify-content: center;
@@ -96,11 +97,24 @@
 
 .form-group .checkbox-wrapper{
     color: var(--light-grey);
-    position: relative;
+    margin: 32px 0;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap:12px;
 }
 
-.form-group .checkbox-wrapper span{
-    position: absolute;
-    right: 0;
+
+@media (min-width: 768px) {
+    .form-group .btn-wrapper{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .form-group .checkbox-wrapper{
+        justify-content: space-between;
+        flex-direction: row;
+    }
+    
 }
