--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -23,7 +23,7 @@
             <input type="checkbox" name="showClosed" formControlName="showClosed"/>
             <label for="showClosed">Exibir unidades fechadas</label>
         </div>
-        <span>resultados encontrados: {{ results.length }}</span>
+        <span>resultados encontrados: {{ filteredResults.length }}</span>
     </div>
     <div class="btn-wrapper">
         <button class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
