add style card components

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,7 +4,14 @@
         opened: card.opened
     }">{{ card.opened ? 'Aberto' : 'Fechado' }}</span>
         <h3> {{card.title}}</h3>
-        <p> {{card.content}}</p>
+        <p [innerHTML]="card.content"></p>
+        <div class="divider"></div>
+        <ul>
+            <img *ngIf="card.mask" [src]="'/' + card.mask + '-mask.png'"/>
+            <img *ngIf="card.towel" [src]="'/' + card.towel + '-towel.png'"/>
+            <img *ngIf="card.fountain" [src]="'/' + card.fountain + '-fountain.png'"/>
+            <img *ngIf="card.locker_room" [src]="'/' + card.locker_room + '-lockerroom.png'"/>
+        </ul>
         <ul>
             <li *ngFor="let schedule of card.schedules">
                 <b>{{schedule.weekdays}}</b>
