--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
 
-    padding: 8px;
+    padding: 12px;
     border-radius: 8px;
     background-color: rgba(179, 179, 179, 0.1);
 
@@ -13,38 +13,45 @@
     box-shadow: 1px 1px 1px 1px rgba(51,51,51,0.15);
 
     gap: 8px;
-    max-width: 250px;
+    width: 250px;
+    height: 400px;
 }
 
-span{
+.card .divider{
+    height: 1px;
+    width: 100%;
+    background-color: var(--light-text);
+}
+
+.card span{
     font-weight: 700;
     font-size: 14px;
     color: var(--red);
 }
 
-span.opened {
+.card span.opened {
     color: var(--green);
 }
 
-h3{
+.card h3{
     color: var(--dark-grey);
     font-size: 24px;
     font-weight: 700;
 }
 
-p {
+.card p {
     color: var(--light-grey);
     font-size: 14px;
 }
 
-ul {
+.card ul {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     gap: 24px;
 }
 
-li{
+.card li{
     display: flex;
     flex-direction: column;
     color: var(--dark-grey);
@@ -53,7 +60,12 @@ li{
     gap: 8px;
 }
 
-li  b{
+.card li  b{
     color: var(--dark-grey);
     font-size: 18px;
+}
+
+.card img {
+    margin-top: 10px;
+    height: 40px ;
 }
