feat: create legend component

--- a/src/app/components/legend/legend.component.html
+++ b/src/app/components/legend/legend.component.html
@@ -1,1 +1,61 @@
-<p>legend works!</p>
+<div class="legend">
+    <div class="legend-item">
+        <h4>Máscara</h4>
+        <div class="legend-images">
+            <div class="legend-image">
+                <img src="required-mask.png"/>
+                <p>Obrigatório</p>
+            </div>
+            <div class="legend-image">
+                <img src="recommended-mask.png"/>
+                <p>Recomendado</p>
+            </div>
+        </div>
+    </div>
+    <div class="legend-item">
+        <h4>Toalha</h4>
+        <div class="legend-images">
+            <div class="legend-image">
+                <img src="required-towel.png"/>
+                <p>Obrigatório</p>
+            </div>
+            <div class="legend-image">
+                <img src="recommended-towel.png"/>
+                <p>Recomendado</p>
+            </div>
+        </div>
+    </div>
+    <div class="legend-item">
+        <h4>Bebedouro</h4>
+        <div class="legend-images">
+            <div class="legend-image">
+                <img src="partial-fountain.png"/>
+                <p>Parcial</p>
+            </div>
+            <div class="legend-image">
+                <img src="not_allowed-fountain.png"/>
+                <p>Proibido</p>
+            </div>
+        </div>
+    </div>
+    <div class="legend-item">
+        <h4>Vestiários</h4>
+        <div class="legend-images">
+            <div class="legend-image">
+                <img src="allowed-lockerroom.png"/>
+                <p>Liberado</p>
+            </div>
+            <div class="legend-image">
+                <img src="partial-lockerroom.png"/>
+                <p>Parcial</p>
+            </div>
+            <div class="legend-image">
+                <img src="closed-lockerroom.png"/>
+                <p>Fechado</p>
+            </div>
+
+        </div>
+    </div>
+
+ 
+</div>
